--- a/src/main/resources/static/src/css/election.css
+++ b/src/main/resources/static/src/css/election.css
@@ -4,16 +4,17 @@
     color: #000000;
     display: flex;
     flex-direction: column;
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
+    margin-bottom: 50px;
 }
 
 .election {
-    padding: 20px;
+    padding: 20px 20px 20px 20px;
     border-radius: 10px;
-    border: 1px solid #000000;
     background-color: #FFFFFF;
     margin-top: 30px;
+    margin-right: 10px;
 }
 
 .election:first-child {
@@ -29,16 +30,18 @@
     height: max-content;
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 20px;
 }
 
 .electionOption {
-    padding: 10px;
-    width: 100%;
+    padding: 20px;
+    width: 95%;
     height: max-content;
     display: flex;
     gap: 20px;
     border: 1px solid #000000;
+    border-radius: 5px;
 }
 
 .electionOption img {
@@ -58,21 +61,8 @@
 .electionOptionShortDescription {
     max-width: 400px;
     max-height: 100px;
-    position: relative;
-    max-height: 3.6em;
     overflow: hidden;
-    line-height: 1.2em;
 }
-
-.electionOptionShortDescription::after {
-    content: "...";
-    font-weight: bold;
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    padding: 0 20px 1px 45px;
-    background: linear-gradient(to right, transparent, white 55%);
-  }
 
 .electionOptionNameAndYOBox {
     display: flex;
