--- a/src/main/resources/static/src/css/main.css
+++ b/src/main/resources/static/src/css/main.css
@@ -17,7 +17,7 @@ a {
 
 aside {
     width: 220px;
-    height: 100%;
+    height: 71vh;
     border: 1px solid #000000;
     border-radius: 10px;
     display: flex;
