--- a/src/main/resources/static/src/css/electionResult.css
+++ b/src/main/resources/static/src/css/electionResult.css
@@ -1,10 +1,11 @@
 .electionsBox {
     width: 100%;
     height: max-content;
+    min-height: 71vh;
     color: #000000;
     display: flex;
     flex-direction: column;
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
     margin-bottom: 50px;
 }
@@ -12,7 +13,8 @@
 .electionResult {
     padding: 20px 20px 20px 20px;
     border-radius: 10px;
-    background-color: #FFFFFF;
+    background-color: #64b5f6;
+    border: 1px solid #000000;
     margin-top: 30px;
     margin-right: 10px;
 }
@@ -21,12 +23,17 @@
     margin-top: 0px;
 }
 
+.electionResultTitle {
+    margin-bottom: 30px;
+}
+
 .electonOptionBox {
     display: flex;
-    gap: 20px;
+    gap: 40px;
     margin-top: 10px;
     border: 1px solid transparent;
     border-radius: 10px;
+    background-color: #CAF0F8;
 }
 
 .electonOptionBox.winner {
@@ -40,6 +47,7 @@
 
 .electionOption {
     border: 0;
+    border-radius: 10px;
     display: flex;
     gap: 20px;
     flex-wrap: wrap;
