--- a/src/main/resources/static/src/css/petition.css
+++ b/src/main/resources/static/src/css/petition.css
@@ -1,10 +1,11 @@
 .petitionsBox {
     width: 100%;
+    min-height: 71vh;
     height: max-content;
     color: #000000;
     display: flex;
     flex-direction: column;
-    overflow-y: scroll;
+    overflow-y: auto;
     overflow-x: hidden;
     margin-bottom: 50px;
 }
@@ -17,6 +18,7 @@
     margin-right: 10px;
     border: 1px solid #000000;
     border-radius: 5px;
+    background-color: #64b5f6;
 }
 
 .petition:first-child {
@@ -28,12 +30,14 @@
 }
 
 .petitionInfoBox {
-    padding: 10px;
+    padding: 15px;
     width: 97.5%;
     height: max-content;
     display: flex;
     flex-direction: row;
     gap: 20px;
+    background-color: #CAF0F8;
+    border-radius: 10px;
 }
 
 .petitionShortDescription {
