--- a/src/main/resources/static/src/css/petition.css
+++ b/src/main/resources/static/src/css/petition.css
@@ -1,3 +1,13 @@
+.loadingBox {
+    width: 100%;
+    height: 80%;
+    color: #000000;
+    font-size: 36px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .petitionsBox {
     width: 100%;
     min-height: 71vh;
