Fix some issues with page changing handle while reloading the page.

--- a/src/main/resources/static/src/css/electionResult.css
+++ b/src/main/resources/static/src/css/electionResult.css
@@ -17,7 +17,6 @@
     flex-direction: column;
     overflow-y: auto;
     overflow-x: hidden;
-    margin-bottom: 50px;
 }
 
 .electionResult {
@@ -31,6 +30,10 @@
 
 .electionResult:first-child {
     margin-top: 0px;
+}
+
+.electionResult:last-child {
+    margin-bottom: 30px;
 }
 
 .electionResultTitle {
