Add some light changes in frontend components and delete some console.log()'s.

--- a/src/main/resources/static/src/css/election.css
+++ b/src/main/resources/static/src/css/election.css
@@ -115,6 +115,12 @@
     transition: all 0.2s ease-in-out;
 }
 
+.electionOptionVoteForButton.blocked {
+    background-color: #CAF0F8;
+    border: 2px solid red;
+    color: red;
+}
+
 .electionOptionMoreInfoButton:hover, .electionOptionVoteForButton:hover {
     cursor: pointer;
     transform: scale(1.05);
