Add single-vote functionality for all (3 types of events: Election, Petition and Survey) models.

--- a/src/main/resources/static/src/css/petition.css
+++ b/src/main/resources/static/src/css/petition.css
@@ -78,6 +78,12 @@
     transition: all 0.2s ease-in-out;
 }
 
+.petitionOptionVoteForButton.blocked {
+    background-color: #CAF0F8;
+    border: 2px solid red;
+    color: red;
+}
+
 .petitionOptionMoreInfoButton:hover, .petitionOptionVoteForButton:hover {
     cursor: pointer;
     transform: scale(1.05);
