--- a/src/main/resources/static/src/css/header.css
+++ b/src/main/resources/static/src/css/header.css
@@ -25,6 +25,7 @@ a {
     grid-gap: 20px;
     -webkit-user-select: none;
     user-select: none;
+    align-items: stretch;
 }
 
 .headerNavMenuElement {
@@ -49,13 +50,15 @@ a {
 }
 
 .profileBox {
-    width: 40px;
-    height: 40px;
-    padding: 5px;
+    height: calc(100% - 8.05px);
+    padding: 2.5px 5px;
     background-color: #0077B6;
     border-radius: 5px;
     transition: all 0.2s ease-in-out;
     border: 2px solid transparent;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .profileBox:hover {
