--- a/src/main/resources/static/src/css/main.css
+++ b/src/main/resources/static/src/css/main.css
@@ -2,11 +2,20 @@ main {
     max-height: 75vh;
     width: auto;
     flex-grow: 1;
-    padding: 20px 30px 30px 30px;
+    padding: 0px 30px 30px 30px;
     display: flex;
     justify-content: space-between;
     background-color: inherit;
     grid-gap: 50px;
+    animation: smoothAppearing 1.5s forwards;
+}
+
+@keyframes smoothAppearing {
+    from {
+        opacity: 0;
+    } to {
+        opacity: 1;
+    }
 }
 
 a {
