--- a/src/main/resources/static/src/css/petition.css
+++ b/src/main/resources/static/src/css/petition.css
@@ -18,7 +18,6 @@
     flex-direction: column;
     overflow-y: auto;
     overflow-x: hidden;
-    margin-bottom: 50px;
     animation: smoothAppearing 1.5s forwards;
 }
 
@@ -41,6 +40,10 @@
 
 .petition:first-child {
     margin-top: 0px;
+}
+
+.petition:last-child {
+    margin-bottom: 79px;
 }
 
 .petitionTitle {
